samples/_failures_safe/1761792436_9a597f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0b5611a.c: In function ‘main’:
./samples/SAFE/__tmp_d0b5611a.c:147:5: error: expected expression at end of input
  147 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_d0b5611a.c:147:5: error: expected declaration or statement at end of input
